# TouchController

./: .bazelrc  .editorconfig  .gitattributes  BUILD.bazel  ENVIRONMENT_SETUP.md  MODULE.bazel  README.md  maven_install.json  modrinth_lock.json  neoforge_pin.txt  neoform_pin.txt  repin_all.sh
combine/: BUILD.bazel  libraries.bzl
combine/backend/minecraft/: BUILD.bazel
combine/core/animation/: AnimateState.kt  BUILD.bazel  MutableValue.kt  TweenManager.kt  TweenSpec.kt  TwoWayConverter.kt
combine/core/data/: BUILD.bazel  Identifier.kt  Text.kt
combine/core/layout/: Alignment.kt  Arrangement.kt  BUILD.bazel  Layout.kt
combine/core/modifier/: BUILD.bazel  Modifier.kt  ParentDataModifierNode.kt
combine/core/node/: AttachListenerModifierNode.kt  BUILD.bazel  CombineOwner.kt  LayoutNode.kt  NodeRenderer.kt  UiApplier.kt  WrapperModifierNode.kt
combine/core/paint/: BUILD.bazel  Canvas.kt  Color.kt  Drawable.kt  Texture.kt
combine/core/screen/: BUILD.bazel  CloseHandler.kt  DismissHandler.kt  OnDismissRequestDispatcher.kt  ScreenFactory.kt  ViewModel.kt
combine/core/sound/: BUILD.bazel  SoundManager.kt
combine/core/text/: BUILD.bazel  TextHitTestProvider.kt  TextMeasurer.kt
combine/core/widget/: BUILD.bazel  BaseText.kt  Canvas.kt  Dialog.kt  Popup.kt  Texture.kt
combine/data/: BUILD.bazel  Size.kt
combine/example/calculator/: BUILD.bazel  CalculatorMod.kt
combine/example/hello_world/: BUILD.bazel  HelloWorldMod.kt
combine/example/widget_factory/: BUILD.bazel
combine/item/data/: BUILD.bazel  Item.kt  ItemStack.kt
combine/item/paint/: BUILD.bazel  ItemCanvas.kt
combine/item/widget/: BUILD.bazel  Item.kt  ItemButton.kt  ItemGrid.kt
combine/style/: BUILD.bazel  ColorSet.kt  ColorTheme.kt  DrawableSet.kt  OnOffSet.kt  TextStyle.kt  TextureSet.kt
combine/theme/: texture_theme.bzl  theme_info_jar.bzl
combine/theme/base/: BUILD.bazel  Theme.kt
combine/theme/blackstone/: BUILD.bazel  BlackstoneTheme.kt
combine/theme/oreui/: BUILD.bazel  OreUITheme.kt
combine/theme/resources/: fabric.mod.atlas.json  fabric.mod.vanilla.json
combine/theme/vanilla/: BUILD.bazel
combine/widget/: AlertDialog.kt  BUILD.bazel  Button.kt  CheckBox.kt  CheckBoxButton.kt  CheckButton.kt  ClickableText.kt  ColorPicker.kt  DropDownMenu.kt  EditText.kt  FullScreenDialog.kt  Icon.kt  IconButton.kt  Link.kt  Radio.kt  Select.kt  Slider.kt  Switch.kt  Text.kt  TextButton.kt  WidgetState.kt
game/25w14craftmine/: BUILD.bazel  maven_install_fabric.json
game/26.1.2/: BUILD.bazel  maven_install_fabric.json
game/26.2/: BUILD.bazel  maven_install_fabric.json
game/26w14a/: BUILD.bazel  maven_install_fabric.json
intellij_plugin/expect_actual/: ActualConstructorMarkerProvider.kt  ActualImplMarkerProvider.kt  Assets.kt  BUILD.bazel  ExpectFactoryMarkerProvider.kt
module/: blazerod.MODULE.bazel  combine.MODULE.bazel  copybara.MODULE.bazel  fabric.MODULE.bazel  llvm-mingw.MODULE.bazel  minecraft.MODULE.bazel  neoforge.MODULE.bazel  rules.MODULE.bazel  rust.MODULE.bazel
multijar/: BUILD.bazel
multijar/common/: BUILD.bazel  MultiJarManifest.java
multijar/neov10/: BUILD.bazel  NeoV10Locator.java  NeoV10ModReader.java
multijar/neov3/: BUILD.bazel  NeoV3Locator.java  NeoV3ModReader.java
rule/: BUILD.bazel  cc_jni_library.bzl  class_version_test.bzl  jar.bzl  jni_library.bzl  jvm_opts.bzl  maven_publish.bzl  merge_jar.bzl  merge_library.bzl  mod_info_jar.bzl  pngcrush.bzl  remap_jar.bzl  text_resource_jar.bzl  unified_jar.bzl  unified_jij.bzl  upload_modrinth.bzl
rule/aboutlibraries_generator/: AboutLibrariesGenerator.kt  BUILD.bazel  Config.kt
rule/class_version_checker/: BUILD.bazel  ClassVersionChecker.kt  launcher.bat.tpl  launcher.sh.tpl
rule/combine/: library.bzl  minecraft.bzl  texture.bzl
rule/combine/kotlin/: KotlinTextureBindingGenerator.kt
rule/curseforge_uploader/: BUILD.bazel  CurseForgeUploader.java  CurseForgeVersionsResolver.java  UploadMetadata.java  UploadResponse.java  VersionEntry.java  VersionTypeEntry.java
rule/dev_launch_wrapper/: BUILD.bazel  native_manifest.bzl
rule/dev_launch_wrapper/cpp/: BUILD.bazel  context.h  launcher.cpp  plugin.h
rule/dev_launch_wrapper/java/: AttributeEnvironment.java  BUILD.bazel  ContextAttributeKey.java  DevLaunchContext.java  DevLaunchPlugin.java  DevLaunchWrapper.java
rule/fabric/: mod_json_jar.bzl
rule/maven_publisher/: MavenPublisher.java
rule/mergetool/: BUILD.bazel  MergeTool.java  MergeToolWorker.java
rule/mergetool/api/: BUILD.bazel
rule/mergetool/impl/: BUILD.bazel
rule/modrinth_uploader/: BUILD.bazel  ModrinthUploader.java
rule/neoforge/: merge_jij.bzl  mod_toml_jar.bzl
rule/neoforge/access_widener_converter/: AccessWidenerConvertor.java
rule/neoforge/jij_merger/: JarInJarMerger.java
rule/tiny_remapper_worker/: BUILD.bazel  TinyRemapperWorker.java
rule/token_helper/: BUILD.bazel  ModrinthTokenSaver.java  TokenBackend.java  TokenBackends.java
rule/touchcontroller/: control_texture_set.bzl  text_binding.bzl
rule/touchcontroller/empty_texture_generator/: EmptyTextureGenerator.kt
rule/touchcontroller/text_binding_generator/: TextsBinding.kt
rule/touchcontroller/texture_set_generator/: BUILD.bazel  TextureSetGenerator.kt
touchcontroller/: BUILD.bazel  NEWS-en.md  NEWS-zh.md  README.md  libraries.bzl  properties.bzl
touchcontroller/api/: BUILD.bazel
touchcontroller/api/example/: BUILD.bazel
touchcontroller/api/resources/: fabric.mod.json  mcmod.info
touchcontroller/buildinfo/: BUILD.bazel
touchcontroller/common/: BUILD.bazel
touchcontroller/common/about/: BUILD.bazel
touchcontroller/common/annotations/: BUILD.bazel
touchcontroller/common/api/: BUILD.bazel  TouchControllerApiImpl.kt
touchcontroller/common/assets/: BUILD.bazel  TextureItem.kt  TextureItems.kt  TextureSet.kt  TextureSets.kt
touchcontroller/common/config/: BUILD.bazel
touchcontroller/common/control/: BUILD.bazel  ConfigProperties.kt  (+1 more)
touchcontroller/fabric/: BUILD.bazel
touchcontroller/neoforge/: BUILD.bazel
touchcontroller/resources/: fabric.mod.json  neoforge.mods.toml
(+1155 files in other folders)
