"TouchController module file"

module(
    name = "touchcontroller",
    version = "0.3.1-alpha",
)

bazel_dep(name = "rules_java", version = "9.6.1")
bazel_dep(name = "rules_kotlin", version = "2.3.21")
bazel_dep(name = "rules_jvm_external", version = "7.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "bazel_lib", version = "3.3.1")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "rules_rust_mdbook", version = "0.70.0")
bazel_dep(name = "rules_python", version = "2.0.2")
bazel_dep(name = "rules_jni", version = "0.11.1")
bazel_dep(name = "rules_cc", version = "0.2.19")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")
bazel_dep(name = "bazel_worker_api", version = "0.0.11")
bazel_dep(name = "with_cfg.bzl", version = "0.14.6")
bazel_dep(name = "protobuf", version = "35.1")

# Our own rules
bazel_dep(name = "rules_mc", version = "0.0.0")
local_path_override(
    module_name = "rules_mc",
    path = "rules_mc",
)

# Patch rule_android to enable maven pinning
bazel_dep(name = "rules_android", version = "0.7.3")
archive_override(
    module_name = "rules_android",
    integrity = "sha256-xM0ljTdh7/CO4ETAJSF5u27or4qyT32vtzsoDu2pgkM=",
    patch_strip = 1,
    patches = [
        "//third_party/rules_android/patches:maven_pinning.patch",
    ],
    strip_prefix = "rules_android-0.7.3",
    url = "https://github.com/bazelbuild/rules_android/releases/download/v0.7.3/rules_android-v0.7.3.tar.gz",
)

# Patch rules_android_ndk to fix https://github.com/bazelbuild/rules_android_ndk/issues/107
bazel_dep(name = "rules_android_ndk", version = "0.1.5")
archive_override(
    module_name = "rules_android_ndk",
    integrity = "sha256-B+eid3ETuz0KQyJl0ceM+qFApbxMgr5MjNmIs0OC7JA=",
    patch_strip = 1,
    patches = [
        "//third_party/rules_android_ndk/patches:fix-windows-path.patch",
    ],
    strip_prefix = "rules_android_ndk-0.1.5",
    url = "https://github.com/bazelbuild/rules_android_ndk/releases/download/v0.1.5/rules_android_ndk-v0.1.5.tar.gz",
)

# Patch bazel_worker_java to add maven pinning
bazel_dep(name = "bazel_worker_java", version = "0.0.11")
archive_override(
    module_name = "bazel_worker_java",
    integrity = "sha256-vk+rcgFNwL2S6tUUb+mumTm9zSYkU2mbtSth5C+GToU=",
    patch_strip = 1,
    patches = [
        "//third_party/bazel_worker_java/patches:maven_pinning.patch",
        "//third_party/bazel_worker_java/patches:module_dot_bazel_version.patch",
    ],
    strip_prefix = "bazel-worker-api-0.0.11/java",
    url = "https://github.com/bazelbuild/bazel-worker-api/releases/download/v0.0.11/bazel-worker-api-v0.0.11.tar.gz",
)

# Patch rules_kotlin to add common source support
archive_override(
    module_name = "rules_kotlin",
    patch_strip = 1,
    patches = [
        "//third_party/rules_kotlin/patches:common_library.patch",
        "//third_party/rules_kotlin/patches:module_dot_bazel_version.patch",
    ],
    sha256 = "118fcba9b15a5f35f52be6ea84a3cd98f78658b2071ec0f3a1de6d2863f2e50a",
    url = "https://github.com/bazel-contrib/rules_kotlin/releases/download/v2.3.21/rules_kotlin-v2.3.21.tar.gz",
)

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "7fe1eab26d2b8eeb5e1c6a2f38bddb001e3f9696",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

# libraries
bazel_dep(name = "libffi", version = "3.4.7.bcr.4")
bazel_dep(name = "bullet", version = "3.26.0-rc0.bcr.2")
bazel_dep(name = "glfw", version = "3.4.0.bcr.2")
bazel_dep(name = "glm", version = "1.0.3")
bazel_dep(name = "assimp", version = "6.0.3")
bazel_dep(name = "zlib", version = "1.3.2")
bazel_dep(name = "libpng", version = "1.6.54")

# Patch libexpat to add windows support
bazel_dep(name = "libexpat", version = "2.7.1.bcr1")
archive_override(
    module_name = "libexpat",
    build_file = "//third_party/expat:BUILD.expat.bazel",
    integrity = "sha256-hTcnl/8Gc6j8SmvhZGa7WgyijA3PPG96wWhrSjuiqrs=",
    patch_strip = 1,
    patches = ["//third_party/expat/patches:add-module-file.patch"],
    strip_prefix = "libexpat-R_2_7_1",
    url = "https://github.com/libexpat/libexpat/archive/refs/tags/R_2_7_1.tar.gz",
)

# toolchain
include("//module:zig_cc.MODULE.bazel")
include("//module:llvm-mingw.MODULE.bazel")

# languages
include("//module:rust.MODULE.bazel")

# platforms
include("//module:android.MODULE.bazel")
include("//module/third_party:intellij.MODULE.bazel")

# tools
include("//module:mdbook.MODULE.bazel")
include("//module:copybara.MODULE.bazel")

# rules
include("//module:rules.MODULE.bazel")
include("//module:minecraft.MODULE.bazel")
include("//module:parchment.MODULE.bazel")
include("//module:modrinth.MODULE.bazel")

# loaders
include("//module:neoforge.MODULE.bazel")
include("//module:fabric.MODULE.bazel")

# third party
include("//module/third_party:jkeychain.MODULE.bazel")
include("//module/third_party:sodium.MODULE.bazel")
include("//module/third_party:iris.MODULE.bazel")
include("//module/third_party:kotlinforforge.MODULE.bazel")
include("//module/third_party:mocha.MODULE.bazel")
include("//module/third_party:wayland.MODULE.bazel")
include("//module/third_party:saba.MODULE.bazel")
include("//module/third_party:fabric_loom.MODULE.bazel")
include("//module/third_party:pngcrush.MODULE.bazel")
include("//module/third_party:aboutlibraries.MODULE.bazel")
include("//module/third_party:androidx_compose_runtime.MODULE.bazel")
include("//module/third_party:androidx_savedstate.MODULE.bazel")
include("//module/third_party:androidx_lifecycle.MODULE.bazel")

# projects
include("//module:blazerod.MODULE.bazel")
include("//module:armorstand.MODULE.bazel")
include("//module:combine.MODULE.bazel")
include("//module:touchcontroller.MODULE.bazel")
include("//module:blazesdl.MODULE.bazel")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        # Kotlin
        "org.jetbrains.kotlin:kotlin-stdlib:2.2.21",
        "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.2",
        "org.jetbrains.kotlinx:kotlinx-serialization-core:1.9.0",
        "org.jetbrains.kotlinx:kotlinx-serialization-json:1.9.0",

        # Graphics
        "org.joml:joml:1.10.5",
        "it.unimi.dsi:fastutil:8.5.15",

        # Swing
        "org.jetbrains.kotlinx:kotlinx-coroutines-swing:1.10.2",

        # Testing
        "org.jetbrains.kotlin:kotlin-test-junit5:2.1.10",
        "org.junit.jupiter:junit-jupiter-api:5.12.2",
        "org.junit.jupiter:junit-jupiter-engine:5.12.2",
        "org.junit.platform:junit-platform-suite-api:1.12.2",
        "org.junit.platform:junit-platform-suite-engine:1.12.2",
        "org.junit.platform:junit-platform-console:1.12.2",
    ],
    fetch_sources = True,
    known_contributing_modules = ["protobuf"],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://maven.google.com/",
        "https://maven.fabricmc.net/",
        "https://maven.neoforged.net/releases",
    ],
)
use_repo(maven, "maven")

register_toolchains("//:kotlin_toolchain")
