load("//rule:jvm_opts.bzl", "kt_jvm_javac_options_set", "kt_jvm_kotlinc_options_set")
load("//rule:merge_library.bzl", "merge_library_group")

jvm_versions = [
    8,
    11,
    17,
    21,
    25,
]

kt_jvm_kotlinc_options_set(
    name = "kotlinc_opts",
    versions = jvm_versions,
    visibility = ["//combine:__subpackages__"],
    x_lambdas = "indy",
)

kt_jvm_javac_options_set(
    name = "javac_opts",
    versions = jvm_versions,
    visibility = ["//combine:__subpackages__"],
)

merge_library_group(
    name = "combine",
    visibility = ["//visibility:public"],
    deps = [
        "//combine/core/animation",
        "//combine/core/data",
        "//combine/core/input/focus",
        "//combine/core/input/interaction",
        "//combine/core/input/key",
        "//combine/core/input/pointer",
        "//combine/core/input/text",
        "//combine/core/layout",
        "//combine/core/layout/constraints",
        "//combine/core/layout/measure",
        "//combine/core/modifier",
        "//combine/core/modifier/drawing",
        "//combine/core/modifier/focus",
        "//combine/core/modifier/input",
        "//combine/core/modifier/key",
        "//combine/core/modifier/placement",
        "//combine/core/modifier/pointer",
        "//combine/core/modifier/scroll",
        "//combine/core/node",
        "//combine/core/paint",
        "//combine/core/screen",
        "//combine/core/sound",
        "//combine/core/text",
        "//combine/core/util/atlas",
        "//combine/core/util/dispatcher",
        "//combine/core/util/math",
        "//combine/core/util/ninepatch",
        "//combine/core/widget",
        "//combine/core/widget/layout",
        "//combine/data",
        "//combine/style",
        "//combine/theme/base",
        "//combine/theme/vanilla",
        "//combine/widget",
    ],
)
