"MODULE.bazel Combine part"

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.jetbrains.kotlin:kotlin-compose-compiler-plugin-embeddable:2.3.20",
        "androidx.compose.runtime:runtime-desktop:1.10.3",
        "androidx.compose.runtime:runtime-saveable-desktop:1.10.3",
        "androidx.collection:collection-jvm:1.6.0",
        "org.mini2Dx:universal-tween-engine:6.3.3",
    ],
)
