"MODULE.bazel llvm-mingw part"

llvm_mingw = use_extension("//repo:llvm_mingw.bzl", "llvm_mingw")

toolchains = {
    "linux_x86_64": {
        "url": "https://github.com/mstorsjo/llvm-mingw/releases/download/20260602/llvm-mingw-20260602-ucrt-ubuntu-22.04-x86_64.tar.xz",
        "sha256": "9d191203f9768ead60662d3ae53cdf28e0a28b1e6d44b7f329b9202cb2add337",
        "strip_prefix": "llvm-mingw-20260602-ucrt-ubuntu-22.04-x86_64",
        "type": "tar.xz",
        "exec_compatible_with": [
            "@platforms//os:linux",
            "@platforms//cpu:x86_64",
        ],
    },
    "linux_aarch64": {
        "url": "https://github.com/mstorsjo/llvm-mingw/releases/download/20260602/llvm-mingw-20260602-ucrt-ubuntu-22.04-aarch64.tar.xz",
        "sha256": "e71b61c968f65f94ed3878ca22ab663d7854d91c053c1b8a824ac2f1c9a18503",
        "strip_prefix": "llvm-mingw-20260602-ucrt-ubuntu-22.04-aarch64",
        "type": "tar.xz",
        "exec_compatible_with": [
            "@platforms//os:linux",
            "@platforms//cpu:aarch64",
        ],
    },
    "macos": {
        "url": "https://github.com/mstorsjo/llvm-mingw/releases/download/20260602/llvm-mingw-20260602-ucrt-macos-universal.tar.xz",
        "sha256": "d3310f9b86b368900850af8bc95da20648f9fc6b0be3bb64dbf8fb18d7c0894f",
        "strip_prefix": "llvm-mingw-20260602-ucrt-macos-universal",
        "type": "tar.xz",
        "exec_compatible_with": [
            "@platforms//os:macos",
        ],
    },
    "windows_x86_64": {
        "url": "https://github.com/mstorsjo/llvm-mingw/releases/download/20260602/llvm-mingw-20260602-ucrt-x86_64.zip",
        "sha256": "3de3eda9377bbaf35f8c9001f190380f63b8ee981fa55d3ae9d7cce7c6ad7c70",
        "strip_prefix": "llvm-mingw-20260602-ucrt-x86_64",
        "type": "zip",
        "exec_compatible_with": [
            "@platforms//os:windows",
            "@platforms//cpu:x86_64",
        ],
        "binary_extension": ".exe",
        "use_wrapper": False,
    },
    "windows_aarch64": {
        "url": "https://github.com/mstorsjo/llvm-mingw/releases/download/20260602/llvm-mingw-20260602-ucrt-aarch64.zip",
        "sha256": "cb5c20fbe1808e31ada5cbe4efd9daa2fee19c91dac6ec5ca1ac46a9c7247e37",
        "strip_prefix": "llvm-mingw-20260602-ucrt-aarch64",
        "type": "zip",
        "exec_compatible_with": [
            "@platforms//os:windows",
            "@platforms//cpu:aarch64",
        ],
        "binary_extension": ".exe",
        "use_wrapper": False,
    },
    "windows_x86_32": {
        "url": "https://github.com/mstorsjo/llvm-mingw/releases/download/20260602/llvm-mingw-20260602-ucrt-i686.zip",
        "sha256": "0bd7db3527754980e5fb3331b9fffdbad1e5a7aec268d5f6e7d9beb0b5654780",
        "strip_prefix": "llvm-mingw-20260602-ucrt-i686",
        "type": "zip",
        "exec_compatible_with": [
            "@platforms//os:windows",
            "@platforms//cpu:x86_32",
        ],
        "binary_extension": ".exe",
        "use_wrapper": False,
    },
    "windows_armv7": {
        "url": "https://github.com/mstorsjo/llvm-mingw/releases/download/20260602/llvm-mingw-20260602-ucrt-armv7.zip",
        "sha256": "804ad9c43036bb207d6b07768bb11ca96774797fb764d39d7d8302fb75527497",
        "strip_prefix": "llvm-mingw-20260602-ucrt-armv7",
        "type": "zip",
        "exec_compatible_with": [
            "@platforms//os:windows",
            "@platforms//cpu:armv7",
        ],
        "binary_extension": ".exe",
        "use_wrapper": False,
    },
}

[
    (
        llvm_mingw.toolchain(
            name = "llvm_mingw_toolchain_%s" % name,
            binary_extension = toolchain.get("binary_extension", ""),
            exec_compatible_with = toolchain["exec_compatible_with"],
            sha256 = toolchain["sha256"],
            strip_prefix = toolchain["strip_prefix"],
            targets = {
                "x86_64": "x86_64-w64-mingw32",
                "x86_32": "i686-w64-mingw32",
                "aarch64": "aarch64-w64-mingw32",
            },
            type = toolchain["type"],
            url = toolchain["url"],
            use_wrapper = toolchain.get("use_wrapper", True),
        ),
        use_repo(llvm_mingw, "llvm_mingw_toolchain_%s" % name),
        register_toolchains("@llvm_mingw_toolchain_%s//:x86_64_toolchain" % name),
        register_toolchains("@llvm_mingw_toolchain_%s//:x86_32_toolchain" % name),
        register_toolchains("@llvm_mingw_toolchain_%s//:aarch64_toolchain" % name),
    )
    for name, toolchain in toolchains.items()
]
