"MODULE.bazel rules part"

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "net.fabricmc:tiny-remapper:0.14.0",
        "net.fabricmc:mapping-io:0.8.0",
        "net.fabricmc:mapping-io-extras:0.8.0",
        "net.fabricmc:class-tweaker:0.2",
        "org.ow2.asm:asm:9.10.1",
        "org.ow2.asm:asm-commons:9.10.1",
        "org.vineflower:vineflower:1.12.0",
        "com.fasterxml.jackson.core:jackson-core:2.22.0",
        "com.fasterxml.jackson.core:jackson-annotations:2.22",
        "com.fasterxml.jackson.core:jackson-databind:2.22.0",
        "de.swiesend:secret-service:2.0.1-alpha",
        "ch.qos.logback:logback-classic:1.5.34",
        "com.github.mizosoft.methanol:methanol:1.9.0",
        "net.java.dev.jna:jna:5.19.1",
        "net.java.dev.jna:jna-platform:5.19.1",
        "com.palantir.javapoet:javapoet:0.16.0",
        "com.squareup:kotlinpoet-jvm:2.3.0",
        "com.google.jimfs:jimfs:1.3.1",
        "com.github.ajalt.clikt:clikt-jvm:5.1.0",
        "info.picocli:picocli:4.7.7",
        "info.picocli:picocli-codegen:4.7.7",
        "org.apache.maven.resolver:maven-resolver-api:1.9.27",
        "org.apache.maven.resolver:maven-resolver-spi:1.9.27",
        "org.apache.maven.resolver:maven-resolver-util:1.9.27",
        "org.apache.maven.resolver:maven-resolver-connector-basic:1.9.27",
        "org.apache.maven.resolver:maven-resolver-transport-http:1.9.27",
        "org.apache.maven.resolver:maven-resolver-transport-file:1.9.27",
        "org.apache.maven.resolver:maven-resolver-impl:1.9.27",
        "org.apache.maven:maven-resolver-provider:3.9.16",
        "org.apache.maven:maven-model-builder:3.9.16",
        "org.slf4j:slf4j-api:2.0.16",
        "org.eclipse.sisu:org.eclipse.sisu.inject:0.9.0.M4",
        "com.google.inject:guice:6.0.0",
        "javax.inject:javax.inject:1",
        "org.lwjgl:lwjgl:3.3.3",
        "org.lwjgl:lwjgl:jar:natives-linux:3.3.3",
        "org.lwjgl:lwjgl:jar:natives-linux-arm32:3.3.3",
        "org.lwjgl:lwjgl:jar:natives-linux-arm64:3.3.3",
        "org.lwjgl:lwjgl:jar:natives-macos:3.3.3",
        "org.lwjgl:lwjgl:jar:natives-macos-arm64:3.3.3",
        "org.lwjgl:lwjgl:jar:natives-windows:3.3.3",
        "org.lwjgl:lwjgl:jar:natives-windows-arm64:3.3.3",
        "org.lwjgl:lwjgl:jar:natives-windows-x86:3.3.3",
        "org.lwjgl:lwjgl-stb:3.3.3",
        "org.lwjgl:lwjgl-stb:jar:natives-linux:3.3.3",
        "org.lwjgl:lwjgl-stb:jar:natives-linux-arm32:3.3.3",
        "org.lwjgl:lwjgl-stb:jar:natives-linux-arm64:3.3.3",
        "org.lwjgl:lwjgl-stb:jar:natives-macos:3.3.3",
        "org.lwjgl:lwjgl-stb:jar:natives-macos-arm64:3.3.3",
        "org.lwjgl:lwjgl-stb:jar:natives-windows:3.3.3",
        "org.lwjgl:lwjgl-stb:jar:natives-windows-arm64:3.3.3",
        "org.lwjgl:lwjgl-stb:jar:natives-windows-x86:3.3.3",
        "io.github.classgraph:classgraph:4.8.184",
        "at.yawk.lz4:lz4-java:1.11.0",
        "org.apache.commons:commons-compress:1.28.0",
        "org.antlr:antlr4:4.13.2",
        "org.antlr:antlr4-runtime:4.13.2",
    ],
)
