load("//rule:merge_library.bzl", "merge_library_jar")

merge_library_jar(
    name = "multijar",
    manifest_entries = {
        "Automatic-Module-Name": "multijar.loader",
    },
    visibility = ["//visibility:public"],
    deps = [
        "//multijar/neov10",
        "//multijar/neov3",
    ],
)
