load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("//combine:libraries.bzl", "combine_unified_deps", "combine_unified_fabric", "combine_unified_neoforge")
load("//rule:extract_update_log.bzl", "extract_update_log")
load("//rule:unified_jar.bzl", "unified_jar")
load("//touchcontroller:libraries.bzl", "touchcontroller_common_deps", "touchcontroller_fabric_config", "touchcontroller_fabric_deps", "touchcontroller_neoforge_config", "touchcontroller_neoforge_deps", "touchcontroller_unified_deps", "touchcontroller_unified_fabric", "touchcontroller_unified_neoforge")
load("//touchcontroller:properties.bzl", "touchcontroller_version")

alias(
    name = "license",
    actual = "LICENSE",
    visibility = ["//touchcontroller:__subpackages__"],
)

extract_update_log(
    name = "update_log",
    inputs = [
        "NEWS-zh.md",
        "NEWS-en.md",
    ],
    version = touchcontroller_version,
    visibility = ["//touchcontroller:__subpackages__"],
)

copy_file(
    name = "icon",
    src = "//touchcontroller/resources/texture:icon",
    out = "assets/touchcontroller/textures/icon.png",
    is_executable = False,
)

unified_jar(
    name = "touchcontroller",
    fabric_deps = touchcontroller_fabric_config | combine_unified_fabric | touchcontroller_unified_fabric,
    fabric_mod_json = "//touchcontroller/fabric:fabric_mod_json",
    neoforge_deps = touchcontroller_neoforge_config | combine_unified_neoforge | touchcontroller_unified_neoforge,
    neoforge_mod_toml = "//touchcontroller/neoforge:neoforge_mod_toml",
    resources = {":icon": "touchcontroller"},
    deps = touchcontroller_fabric_deps | touchcontroller_common_deps | touchcontroller_neoforge_deps | combine_unified_deps | touchcontroller_unified_deps,
)
