load("//rule:merge_library.bzl", "kt_merge_library")

kt_merge_library(
    name = "data",
    srcs = glob(["*.kt"]),
    javac_opts = "//combine:javac_opts_jvm_8",
    kotlinc_opts = "//combine:kotlinc_opts_jvm_8",
    visibility = ["//visibility:public"],
    deps = [
        "//:kotlin_serialization",
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_core_jvm",
    ],
)
