load("//rule:merge_library.bzl", "kt_merge_library")

kt_merge_library(
    name = "style",
    srcs = glob(["*.kt"]),
    javac_opts = "//combine:javac_opts_jvm_8",
    kotlinc_opts = "//combine:kotlinc_opts_jvm_8",
    merge_deps = [
        "//combine/core/data",
        "//combine/core/paint",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:androidx_compose_runtime_runtime_desktop",
    ],
)
