load("//game:game.bzl", "game_version")

game_version(
    name = "game",
    client = "@minecraft//26.2:client",
    client_assets = "@minecraft_assets//:assets_26.2",
    client_assets_version = "@minecraft_assets//:version_26.2",
    client_libraries = "@minecraft//26.2:client_libraries",
    neoforge = "@neoforge_26_2//:neoforge",
    server = "@minecraft//26.2:server",
    version = "26.2",
    visibility = ["//visibility:public"],
)
