load("//rule:merge_library.bzl", "java_merge_library")

java_merge_library(
    name = "neov3",
    srcs = [
        "NeoV3Locator.java",
        "NeoV3ModReader.java",
    ],
    javacopts = ["--release=21"],
    merge_deps = [
        "//multijar/common",
    ],
    resource_strip_prefix = "multijar/neov3/resources",
    resources = glob(["resources/**"]),
    visibility = ["//multijar:__pkg__"],
    deps = [
        "@maven//:org_jspecify_jspecify",
        "@maven//:org_slf4j_slf4j_api",
        "@neoforge_1_20_6//:cpw_mods_securejarhandler",
        "@neoforge_1_20_6//:net_neoforged_JarJarFileSystems",
        "@neoforge_1_20_6//:net_neoforged_fancymodloader_loader",
        "@neoforge_1_20_6//:org_apache_maven_maven_artifact",
    ],
)
