load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "token_helper",
    srcs = ["TokenBackend.java"],
    visibility = ["//rule:__subpackages__"],
)

java_library(
    name = "token_backends",
    srcs = ["TokenBackends.java"],
    visibility = ["//rule:__subpackages__"],
    deps = [
        ":token_helper",
    ] + select({
        "@platforms//os:macos": ["//rule/token_helper/backend/macos"],
        "@platforms//os:windows": ["//rule/token_helper/backend/windows"],
        "//conditions:default": ["//rule/token_helper/backend/linux"],
    }),
)

java_binary(
    name = "token_saver",
    srcs = ["ModrinthTokenSaver.java"],
    main_class = "top.fifthlight.fabazel.tokenhelper.ModrinthTokenSaver",
    deps = [
        ":token_backends",
        ":token_helper",
        "@maven//:ch_qos_logback_logback_classic",
    ],
)
