load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@bazel_skylib//rules:expand_template.bzl", "expand_template")
load("//combine:properties.bzl", "combine_version")
load("//rule:jar.bzl", "jar")
load("//rule:merge_library.bzl", "merge_library_group", "merge_library_jar")
load("//touchcontroller:properties.bzl", "touchcontroller_authors", "touchcontroller_contributors", "touchcontroller_description", "touchcontroller_fabric_game_versions", "touchcontroller_homepage", "touchcontroller_issue_tracker", "touchcontroller_license", "touchcontroller_source", "touchcontroller_version")

merge_library_group(
    name = "common",
    visibility = ["//touchcontroller:__subpackages__"],
    deps = [
        "//touchcontroller/buildinfo",
        "//touchcontroller/common/about",
        "//touchcontroller/common/about/resources",
        "//touchcontroller/common/annotations",
        "//touchcontroller/common/api",
        "//touchcontroller/common/api/text",
        "//touchcontroller/common/api/texture",
        "//touchcontroller/common/assets",
        "//touchcontroller/common/config:config_group",
        "//touchcontroller/common/control:control_group",
        "//touchcontroller/common/event/block",
        "//touchcontroller/common/event/connection",
        "//touchcontroller/common/event/key",
        "//touchcontroller/common/event/render",
        "//touchcontroller/common/event/tick",
        "//touchcontroller/common/event/window",
        "//touchcontroller/common/gal",
        "//touchcontroller/common/input",
        "//touchcontroller/common/layout",
        "//touchcontroller/common/layout/align",
        "//touchcontroller/common/layout/click",
        "//touchcontroller/common/layout/config",
        "//touchcontroller/common/layout/data",
        "//touchcontroller/common/layout/queue",
        "//touchcontroller/common/layout/widget",
        "//touchcontroller/common/layout/widget/button",
        "//touchcontroller/common/layout/widget/game",
        "//touchcontroller/common/model",
        "//touchcontroller/common/platform",
        "//touchcontroller/common/platform/android",
        "//touchcontroller/common/platform/blazesdl",
        "//touchcontroller/common/platform/capabilities",
        "//touchcontroller/common/platform/ios",
        "//touchcontroller/common/platform/provider",
        "//touchcontroller/common/platform/proxy",
        "//touchcontroller/common/platform/warning",
        "//touchcontroller/common/platform/wayland",
        "//touchcontroller/common/platform/win32",
        "//touchcontroller/common/serialization",
        "//touchcontroller/common/serializer",
        "//touchcontroller/common/state",
        "//touchcontroller/common/ui",
        "//touchcontroller/common/util/color",
        "//touchcontroller/common/util/crosshair",
        "//touchcontroller/common/util/offset",
        "//touchcontroller/common/util/registry",
        "//touchcontroller/common/util/state",
        "//touchcontroller/common/util/uuid",
    ],
)

expand_template(
    name = "fabric_mod_json",
    out = "fabric.mod.json",
    substitutions = {
        "${version}": touchcontroller_version,
        "${license}": touchcontroller_license,
        "${home_page}": touchcontroller_homepage,
        "${sources_page}": touchcontroller_source,
        "${issue_tracker}": touchcontroller_issue_tracker,
        "${description}": touchcontroller_description,
        "${combine_version}": combine_version,
        '"mod_authors_array"': json.encode(touchcontroller_authors),
        '"mod_contributors_array"': json.encode(touchcontroller_contributors),
        '"mod_game_versions_array"': json.encode(touchcontroller_fabric_game_versions),
    },
    template = "resources/fabric.mod.json",
)

expand_template(
    name = "neoforge_mod_toml",
    out = "META-INF/neoforge.mods.toml",
    substitutions = {
        "${version}": touchcontroller_version,
        "${license}": touchcontroller_license,
        "${home_page}": touchcontroller_homepage,
        "${sources_page}": touchcontroller_source,
        "${issue_tracker}": touchcontroller_issue_tracker,
        "${description}": touchcontroller_description,
        "${combine_version}": combine_version,
        "${mod_authors}": ", ".join(touchcontroller_authors),
        "${mod_contributors}": ", ".join(touchcontroller_contributors),
    },
    template = "resources/neoforge.mods.toml",
)

copy_file(
    name = "icon",
    src = "//touchcontroller/resources/texture:icon",
    out = "icon/assets/touchcontroller/textures/icon.png",
    is_executable = False,
)

jar(
    name = "meta_jar",
    resource_paths = {
        ":fabric_mod_json": "fabric.mod.json",
        "//touchcontroller/resources/texture:icon": "assets/touchcontroller/textures/icon.png",
    },
    visibility = ["//touchcontroller:__subpackages__"],
)

merge_library_jar(
    name = "common_merged",
    aspect = True,
    aspect_class = "top.fifthlight.touchcontroller.AspectProvider",
    resources = {
        ":fabric_mod_json": "touchcontroller/common",
        ":neoforge_mod_toml": "touchcontroller/common",
        ":icon": "touchcontroller/common/icon",
    },
    visibility = ["//touchcontroller:__subpackages__"],
    deps = [
        "//touchcontroller/common",
        "//touchcontroller/resources/texture:icon_jar",
    ],
)
